# porcupine-python

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
porcupine/: base.py
tests/: test_custom_arguments.py  test_nested_objects.py  test_resolvers.py  test_simple_object.py  test_simple_resolvers.py
