[tool.poetry]
name = "porcupine-python"
version = "0.1.0"
description = "Hi. I am a fucking porcupine. I am here to serialize your responses."
authors = ["Adam Žúrek <adamzurek14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-flake8 = "^1.0.6"
pytest-cov = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
