[tool.poetry]
name = "porcupine-python"
version = "0.6.0"
description = "Hi. I am a fucking porcupine. I am here to serialize your responses."
authors = ["Adam Žúrek <adamzurek14@gmail.com>"]
license = "MIT"
packages = [{include = "porcupine"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.0"
coverage = {version = "^7", extras = ["toml"]}

[tool.coverage.run]
omit = [
    '*/tests/*', 'venv/*', 'build/', 'dist/', '.github/', 'porcupine.egg-info/', 'runtests.py'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
